syntax = "proto3";

option go_package = "github.com/yago-123/chainnet/pkg/chain/p2p";

message Transaction {
  bytes id = 1;
  repeated TxInput vin = 2;
  repeated TxOutput vout = 3;
}

message Transactions {
  repeated Transaction transactions = 1;
}

message TxInput {
  bytes txid = 1;
  uint64 vout = 2;
  string script_sig = 3;
  string pub_key = 4;
}

message TxOutput {
  uint64 amount = 1;
  string script_pub_key = 2;
  string pub_key = 3;
}

message UTXO {
  bytes txid = 1;
  uint64 vout = 2;
  TxOutput Output = 3;
}

message UTXOs {
  repeated UTXO utxos = 1;
}

message BlockHeader {
  bytes version = 1;
  bytes prev_block_hash = 2;
  bytes merkle_root = 3;
  uint64 height = 4;
  int64 timestamp = 5;
  uint64 target = 6;
  uint64 nonce = 7;
}

message BlockHeaders {
  repeated BlockHeader headers = 1;
}

message Block {
  BlockHeader header = 1;
  repeated Transaction transactions = 2;
  bytes hash = 3;
}
